mule-management-console/v/3.3/monitoring-a-server.adoc
= 监控服务器

本页概述了系统管理员如何使用Mule ESB的管理控制台来监视服务器的运行状况，查看哪些流正在运行或停止，以及确定内存使用情况。

您还可以使用管理控制台来监视群集。一个簇是一组作为单元的Mule实例。有关详细信息，请参阅 link:/mule-management-console/v/3.3/monitoring-a-cluster[监视群集]。

== 查看所有服务器

单击“服务器”选项卡以查看显示所有当前服务器的摘要屏幕。在此屏幕上，单击各个服务器以深入了解有关它们的更多信息。

image::all-servers.png[所有的服务器]

服务器名称左侧的圆圈，上图中的绿色表示服务器当前是否正在运行。绿色圆圈表示服务器正在运行，而红色圆圈表示服务器已停止。将鼠标悬停在圆上以查看有关服务器的状态消息。

点击服务器的复选框，通过功能按钮在该服务器上执行操作。对于选定的服务器，您可以使用按钮及其下拉列表来执行以下操作：

* 添加到组：将服务器添加到服务器组。
* 从组中删除：从服务器组中删除服务器
* 控制服务器：停止或重新启动服务器。
* 取消注册：从控制台取消注册服务器。如果取消注册服务器，将出现一个对话框并要求您确认操作。

要查看有关特定服务器的详细信息，请单击“服务器”窗格中的服务器名称。 “服务器详细信息仪表板”屏幕打开并显示有关所选服务器的摘要信息。使用“服务器”窗格中的其他选项卡查看有关警报，内存使用情况，线程，池使用情况等的详细信息。这些窗格在后面的页面中描述。

== 查看单个服务器

使用服务器详细信息仪表板窗格可以获取关于单个服务器的概述和详细信息，包括操作系统版本信息和自上次重新启动以来的正常运行时间。下图显示了有关选定服务器的摘要详细信息的“仪表板”窗格。

在此窗格中，单击任何特定于服务器的选项卡以查看有关此服务器的更多信息，包括已部署的应用程序，警报，内存使用情况以及有关线程，池，文件，服务器属性，操作系统资源，JMX和服务器设置的信息。

请注意，您还可以在“部署状态”窗格中单击部署名称（例如下图中的示例1）以查看有关此部署组的详细信息。如果这样做，您可以通过单击后退箭头轻松返回到服务器屏幕。 （您也可以通过单击最顶层工具栏中的“应用程序”选项卡来访问相同的部署信息屏幕;有关管理应用程序部署的更多详细信息，请参阅 link:/mule-management-console/v/3.3/deploying-applications[部署应用程序]。）

image::server-details-1.png[服务器细节-1]

您可以自定义为服务器显示的窗格。点击上图中圈出的图标即可。您可以添加其他窗格（也称为portlet）并添加或更改服务器度量标准图表。有关自定义这些窗格的信息，请参阅 link:/mule-management-console/v/3.3/customizing-server-metrics-dashboard[自定义服务器度量标准仪表板]。

== 关于警报的注意事项

[WARNING]
====
*Defining and Viewing Alerts*

您可以从两个位置查看警报：可以从顶级警报选项卡（也可以在其中定义警报）或从特定服务器的警报选项卡中查看警报。顶级警报标签允许您添加新警报并查看现有警报，而在服务器选项卡中，您可以看到为一台或多台服务器设置的警报。但是，要查看“服务器”选项卡中的警报，您必须先选择感兴趣的服务器，然后单击服务器的警报选项卡。 （下图突出显示了这两个选项卡。）
====

image::alert-tabs.png[警报的选项卡]

有关定义和管理警报的更多详情，请参阅 link:/mule-management-console/v/3.3/working-with-alerts[使用警报]页面。查看服务器特定警报的链接：/mule-management-console/v/3.3/viewing-server-alerts查看服务器警报]。
